Further adjust divs for landing and add hero img to hero div

--- a/index.html
+++ b/index.html
@@ -16,32 +16,37 @@
       </ul>
     </div>
     <div class="hero">
-      <h1>This website is awesome</h1>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis tempore
-        dolore ea ipsa labore eum, quaerat quibusdam voluptates deserunt
-        explicabo, vitae saepe. Nisi magnam velit fuga vero necessitatibus quos
-        nostrum.
-      </p>
-      <button class="signUp" value="Sign Up"></button>
+      <div class="text">
+        <h1>This website is awesome</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis tempore
+          dolore ea ipsa labore eum, quaerat quibusdam voluptates deserunt
+          explicabo, vitae saepe. Nisi magnam velit fuga vero necessitatibus
+          quos nostrum.
+        </p>
+        <button class="signUp" value="Sign Up"></button>
+      </div>
+      <img src="images/Header.jpg" alt="Broken Sign" />
     </div>
     <div class="info">
       <h2>Some Random Pictures.</h2>
-      <div class="card">
-        <img src="images/Flowers.jpg" alt="Cherry Blossoms" />
-        <p>These are some flowers in williamsburg.</p>
-      </div>
-      <div class="card">
-        <img src="images/City.jpg" alt="Building" />
-        <p>This is a photo fo a building facade in Manhattan.</p>
-      </div>
-      <div class="card">
-        <img src="images/Sky.jpg" alt="Clouds" />
-        <p>I took this photo on a plane.</p>
-      </div>
-      <div class="card">
-        <img src="images/Tower.jpg" alt="Clocktower" />
-        <p>This is a clocktower somewhere in the West Village.</p>
+      <div class="container">
+        <div class="card">
+          <img src="images/Flowers.jpg" alt="Cherry Blossoms" />
+          <p>These are some flowers in williamsburg.</p>
+        </div>
+        <div class="card">
+          <img src="images/City.jpg" alt="Building" />
+          <p>This is a photo fo a building facade in Manhattan.</p>
+        </div>
+        <div class="card">
+          <img src="images/Sky.jpg" alt="Clouds" />
+          <p>I took this photo on a plane.</p>
+        </div>
+        <div class="card">
+          <img src="images/Tower.jpg" alt="Clocktower" />
+          <p>This is a clocktower somewhere in the West Village.</p>
+        </div>
       </div>
     </div>
     <div class="quote"></div>
