--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <div class="header">
       <div class="logo">Header Logo</div>
       <ul>
-        <li class="nav">Header Link One</li>
-        <li class="nav">Header Link Two</li>
-        <li class="nav">Header Link Three</li>
+        <li class="nav">Link One</li>
+        <li class="nav">Link Two</li>
+        <li class="nav">Link Three</li>
       </ul>
     </div>
     <div class="hero">
@@ -24,7 +24,7 @@
           explicabo, vitae saepe. Nisi magnam velit fuga vero necessitatibus
           quos nostrum.
         </p>
-        <button class="signUp" value="Sign Up"></button>
+        <button class="signUp">Sign Up</button>
       </div>
       <img src="images/Header.jpg" alt="Broken Sign" />
     </div>
@@ -49,7 +49,15 @@
         </div>
       </div>
     </div>
-    <div class="quote"></div>
+    <div class="quote">
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam quasi
+        autem voluptatum quibusdam earum, unde eum natus omnis repellendus
+        impedit repellat illo assumenda dolores quaerat aliquid laudantium
+        libero officiis molestias?
+      </p>
+      <h3>-Caesar, Dressing of Salad</h3>
+    </div>
     <div class="action"></div>
     <div class="footer">Copyright Stephen Kalogridis</div>
   </body>
