Further adjust flex box layout at margins and padding

--- a/index.html
+++ b/index.html
@@ -52,9 +52,7 @@
     <div class="quote">
       <p>
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam quasi
-        autem voluptatum quibusdam earum, unde eum natus omnis repellendus
-        impedit repellat illo assumenda dolores quaerat aliquid laudantium
-        libero officiis molestias?
+        autem voluptatum quibusdam?
       </p>
       <h3>-Caesar, Dressing of Salad</h3>
     </div>
