--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <div class="header">
       <div class="logo">Header Logo</div>
       <ul>
-        <li class="nav">Link One</li>
-        <li class="nav">Link Two</li>
-        <li class="nav">Link Three</li>
+        <li class="nav">One</li>
+        <li class="nav">Two</li>
+        <li class="nav">Three</li>
       </ul>
     </div>
     <div class="hero">
@@ -20,9 +20,7 @@
         <h1>This website is awesome</h1>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis tempore
-          dolore ea ipsa labore eum, quaerat quibusdam voluptates deserunt
-          explicabo, vitae saepe. Nisi magnam velit fuga vero necessitatibus
-          quos nostrum.
+          dolore ea ipsa
         </p>
         <button class="signUp">Sign Up</button>
       </div>
@@ -56,7 +54,11 @@
       </p>
       <h3>-Caesar, Dressing of Salad</h3>
     </div>
-    <div class="action"></div>
+    <div class="action">
+      <h3>Call to action! It's time!</h3>
+      <p>Sign up for our product by clicking that button right over there!</p>
+      <button class="signUp">Sign Up</button>
+    </div>
     <div class="footer">Copyright Stephen Kalogridis</div>
   </body>
 </html>
