Apply final touches to the layout of the site

--- a/index.html
+++ b/index.html
@@ -55,10 +55,12 @@
       <h3>-Caesar, Dressing of Salad</h3>
     </div>
     <div class="action">
-      <h3>Call to action! It's time!</h3>
-      <p>Sign up for our product by clicking that button right over there!</p>
+      <div class="text">
+        <h3>Call to action! It's time!</h3>
+        <p>Sign up for our product by clicking that button right over there!</p>
+      </div>
       <button class="signUp">Sign Up</button>
     </div>
-    <div class="footer">Copyright Stephen Kalogridis</div>
+    <div class="footer">Copyright Stephen Kalogridis 2023</div>
   </body>
 </html>
